# QCEngine

./: .azure-pipelines.yml  .buildinfo  .codecov.yml  .gitattributes  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .travis.yml  .yapfignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  api.html  azure-pipelines.yml  changelog.html  cli.html  codecov.yml  codemeta.json  dev_program_harness.html  environment.html  genindex.html  index.html  install.html  objects.inv  program_overview.html  programs_molecular_mechanics.html  programs_semiempirical.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  single_compute.html  test_ghost.py  versioneer.py  versions.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  Lint.yml  codeql.yml
_images/: inheritance-73f22ae93c9fefc236fdafee2d96c1966f59ad9b.png.map  inheritance-c72d11f91e00b97018aea4f61e7125b725684508.png.map  inheritance-dd44e5295c0a30c9cd152f33f2c213ccaadb2bdf.png.map  inheritance-f0f36dbf79b2a1e42b9c6cc34fa47d5a4e33766c.png.map
_modules/: index.html
_modules/qcengine/: compute.html  config.html  mdi_server.html  stock_mols.html  util.html
_sources/: api.rst.txt  changelog.rst.txt  environment.rst.txt  index.rst.txt  program_overview.rst.txt  single_compute.rst.txt
_sources/api/: qcengine.MDIServer.rst.txt  qcengine.compute.compute.rst.txt  qcengine.compute.compute_procedure.rst.txt  qcengine.config.NodeDescriptor.rst.txt  qcengine.config.global_repr.rst.txt  qcengine.programs.ProgramHarness.rst.txt
_static/: documentation_options.js
_static/css/: small-apps.css  style.css
api/: qcengine.MDIServer.html  qcengine.compute.compute.html  qcengine.compute.compute_procedure.html  qcengine.compute.html  qcengine.compute_procedure.html  qcengine.config.NodeDescriptor.html  qcengine.config.get_config.html  qcengine.config.get_provenance_augments.html  qcengine.config.global_repr.html  qcengine.get_config.html  qcengine.get_molecule.html  qcengine.get_procedure.html  qcengine.get_program.html  qcengine.list_all_procedures.html  qcengine.list_all_programs.html  qcengine.list_available_procedures.html  qcengine.list_available_programs.html  qcengine.programs.ProgramHarness.html  qcengine.programs.get_program.html  qcengine.programs.list_all_programs.html  qcengine.programs.list_available_programs.html  qcengine.programs.register_program.html  qcengine.programs.unregister_program.html  qcengine.register_program.html  qcengine.unregister_program.html  qcengine.util.compute_wrapper.html  qcengine.util.create_mpi_invocation.html  qcengine.util.execute.html  qcengine.util.handle_output_metadata.html  qcengine.util.model_wrapper.html
dev/: .buildinfo  api.html  changelog.html  cli.html  dev_program_harness.html  environment.html  genindex.html  index.html  install.html  objects.inv  program_overview.html  programs_molecular_mechanics.html  programs_semiempirical.html  py-modindex.html  search.html  searchindex.js  single_compute.html
dev/_images/: inheritance-256353b87950929490c6ded1f089c8b8aea08bd5.png.map
dev/_modules/: index.html
dev/_sources/: changelog.rst.txt  single_compute.rst.txt
dev/_static/: documentation_options.js
dev/api/: qcengine.MDIServer.html  qcengine.compute.html  qcengine.compute_procedure.html  qcengine.config.NodeDescriptor.html  qcengine.config.get_config.html  qcengine.config.get_provenance_augments.html  qcengine.config.global_repr.html  qcengine.get_config.html  qcengine.get_information.html  qcengine.get_molecule.html  qcengine.get_procedure.html  qcengine.get_program.html  qcengine.list_all_procedures.html  qcengine.list_all_programs.html  qcengine.list_available_procedures.html  qcengine.list_available_programs.html  qcengine.programs.ProgramHarness.html  qcengine.programs.get_program.html  qcengine.programs.list_all_programs.html  qcengine.programs.list_available_programs.html  qcengine.programs.register_program.html  qcengine.programs.unregister_program.html  qcengine.register_program.html  qcengine.unregister_program.html  qcengine.util.compute_wrapper.html  (+4 more)
devtools/: README.md  azure_ci_images.md  dft_builder.py
docs/: Makefile  README.md  conf.py  index.rst  make.bat  requirements.yml
dqm_compute/: __init__.py  _version.py  compute.py  dqm_config.py  pass_compute.py  psi_compute.py  rdkit_compute.py  units.py
examples/: Examples.ipynb  README.md  terachem_pbs.py
next/: .buildinfo  api.html  changelog.html  cli.html  dev_program_harness.html  environment.html  genindex.html  index.html  install.html  objects.inv  program_overview.html  programs_molecular_mechanics.html  programs_semiempirical.html  py-modindex.html  search.html  searchindex.js  single_compute.html
qcengine/: __init__.py  __main__.py  _version.py  cli.py  compute.py  config.py  exceptions.py  extras.py  mdi_engine.py  mdi_server.py  programs.py  psi_compute.py  rdkit_compute.py  stock_mols.py  testing.py  units.py  util.py
rqm/: registry.json
tests/: addons.py  dqm_config.yaml  test_compute.py  test_config.py
v0.34.1/: .buildinfo  api.html  changelog.html  cli.html  dev_program_harness.html  environment.html  genindex.html  index.html  install.html  objects.inv  program_overview.html  programs_molecular_mechanics.html  programs_semiempirical.html  py-modindex.html  search.html  searchindex.js  single_compute.html
v0.50.0/: .buildinfo  api.html  changelog.html  cli.html  dev_program_harness.html  environment.html  genindex.html  index.html  install.html  objects.inv  program_overview.html  programs_molecular_mechanics.html  programs_semiempirical.html  py-modindex.html  search.html  searchindex.js  single_compute.html  versions.json
v0.50.0rc4/: .buildinfo  api.html  changelog.html  cli.html  dev_program_harness.html  environment.html  genindex.html  index.html  install.html  objects.inv  program_overview.html  programs_molecular_mechanics.html  programs_semiempirical.html  py-modindex.html  search.html  searchindex.js  single_compute.html
(+438 files in other folders)
