[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/MolSSI/QCEngine"
changelog = "https://github.com/MolSSI/QCEngine/blob/master/docs/source/changelog.rst"
documentation = "https://molssi.github.io/QCEngine/"
issues = "https://github.com/MolSSI/QCEngine/issues"

[project]
name = "qcengine"
#version = "0.31.0"
dynamic = ["version"]
requires-python = ">=3.9"
description = "A compute wrapper for Quantum Chemistry, ingesting and producing QCSchema for a variety of QC programs."
authors = [
  { name="The QCArchive Development Team", email="qcarchive@molssi.org" },
]
license = { file="LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
]

dependencies = [
    "pyyaml",
    "py-cpuinfo",
    "psutil",
    "qcelemental>=0.50.0rc4,<0.70.0",
    "pydantic >=2.11; python_version <'3.14'",
    "pydantic >=2.12; python_version >='3.14'",
    "pydantic-settings",
    "packaging",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "codecov",
]
lint = [
    "pre-commit",
    "black >=22.1.0,<23.0a0",  # if running outside of pre-commit
    "isort >=5.13.2",  # if running outside of pre-commit
    # "mypy",
    # "autoflake",
    # "flake8",
]
docs = [  # probably >=py39
    "numpydoc",
    # "docutils",
    "sphinx >=7.0.0",
    "sphinxcontrib-napoleon",
    "sphinx-rtd-theme",
    "autodoc-pydantic>=2.0",
    # "sphinx-automodapi",
    # "sphinx-autodoc-typehints",
    # "pydantic ==2.5.0",  # for now
    # "pydantic-settings ==2.2.0",  # for now
]

[project.scripts]
qcengine = "qcengine.cli:main"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 120

[tool.setuptools]
packages = ["qcengine"]

[aliases]
test="pytest"

[tool.setuptools.package-data]

[tool.setuptools_scm]

[tool.versioningit.vcs]
default-tag = "0.0.99" # useful for CI/shallow clones

[tool.pytest.ini_options]
#filterwarnings = [
#    "ignore::DeprecationWarning",
#    "ignore::PendingDeprecationWarning",
#]
markers = [
    "long",
    """slow: marks tests as slow (deselect with '-m "not slow"')""",
    "smoke",
    'addon: "tests require external non-required software"',

    "adcc: tests using adcc software; skip if unavailable",
    "aimnet2: tests using AIMNET2 software; skip if unavailable",
    "berny: tests using pyberny software; skip if unavailable",
    "cfour: tests using Cfour software; skip if unavailable",
    "classic-dftd3: tests using DFTD3 executable software; skip if unavailable",
    "classic-dftd3_321: tests using DFTD3 classic executable >=v3.2.1 software; skip if unavailable",
    "s-dftd3: tests using modern simple-dftd3 software; skip if unavailable",
    "dftd4: tests using DFTD4 software; skip if unavailable",
    "dftd4_350: tests using DFTD4 >=3.5.0 software; skip if unavailable",
    "gamess: tests using GAMESS-US software; skip if unavailable",
    "gaussian: tests using Gaussian software; skip if unavailable",
    "mctc-gcp: tests using modern mctc-gcp software; skip if unavailable",
    "classic-gcp: tests using GCP executable software; skip if unavailable",
    "geometric: tests using geomeTRIC software; skip if unavailable",
    "mace: tests using MACE software; skip if unavailable",
    "mdi: tests using MDI software; skip if unavailable",
    "molpro: tests using Molpro software; skip if unavailable",
    "mopac: tests using Mopac software; skip if unavailable",
    "mp2d: tests using MP2D software; skip if unavailable",
    "mrchem: tests using MR-Chem software; skip if unavailable",
    "nwchem: tests using NWChem Classic software; skip if unavailable",
    "openmm: tests using OpenMM software; skip if unavailable",
    "optking: tests using OptKing software; skip if unavailable",
    "optking_v2: tests using OptKing QCSchema-v2-compatible software; skip if unavailable",
    "psi4: tests using Psi4 software; skip if unavailable",
    "qcdb: tests using QCDB software; skip if unavailable",
    "qchem: tests using Q-Chem software; skip if unavailable",
    "qcmanybody: tests using QCManyBody software; skip if unavailable",
    "qcore: tests using Qcore (ret.) software; skip if unavailable",
    "rdkit: tests using RDKIT software; skip if unavailable",
    "terachem: tests using TeraChem software; skip if unavailable",
    "terachem_pbs: tests using TeraChem through PBS software; skip if unavailable",
    "torchani: tests using Torch-ANI software; skip if unavailable",
    "torsiondrive: tests using TorsionDrive software; skip if unavailable",
    "turbomole: tests using Turbomole software; skip if unavailable",
    "xtb: tests using xTB software; skip if unavailable",
]
